# ecstatic-estate

./: .env  CNAME  db.py  index.html  pyproject.toml  settings.py
app/: db.py  main.py  repositoryuser.py
app/front/html/: base.html  create-flats.html  flats.html  index.html  login.html  my-flats.html  registration.html
app/front/static/scripts/: script.js
app/front/static/styles/: flats-styles.css  login-styles.css  main-styles.css  register-styles.css
app/services/: security.py
app/services/models/: flat.py  requests.py  user.py
back/: pyproject.toml
back/app/: db.py  main.py  settings.py
back/app/services/types/: user.py
front/: index.html
front/html/: create-flats.html  flats.html  login-tenant.html  login.html  registration.html
front/scripts/: script.js
front/styles/: create-flats-styles.css  main-styles.css  main-styles2.css
html/: catalogue.html  login-tenant.html
scripts/: script.js
services/types/: test.json
styles/: main-styles.css  tenant-styles.css
